Centered layouts and metadata validation

--- a/app/blog/posts/folder/page.mdx
+++ b/app/blog/posts/folder/page.mdx
@@ -2,5 +2,5 @@ export const metadata = {
 	title: "Blog2",
   description: "A test blog post",
   date: "2020-01-01",
-  tags: ["Other", "Test"]
+  tags: ["Other"]
 };
