Refactor blog post handling: replace file system access with getPostList function, add hidden metadata to posts, and update NavBar to conditionally display blog link

--- a/app/blog/posts/rmud2designanalysis/page.mdx
+++ b/app/blog/posts/rmud2designanalysis/page.mdx
@@ -4,6 +4,7 @@ export const metadata = {
 		"A retrospective and analysis of design choices in my text-based MMO, RMUD2.",
 	date: "2024-11-02",
 	tags: ["Game Design"],
+	hidden: true
 };
 
 # A Game Design Analysis of RMUD2
